[tool.poetry]
name = "bloggen"
version = "0.1.0"
description = ""
authors = ["ameyshinde28 <aammeeyy28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^3.3.1"
uvicorn = "^0.34.0"
ctransformers = "^0.2.27"
langchain = "^0.3.15"
python-box = "^7.3.2"
streamlit = "^1.41.1"
langchain-groq = "^0.2.3"
langchain-core = "^0.3.31"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
